nav spacing fixed

--- a/style.css
+++ b/style.css
@@ -293,8 +293,8 @@ footer {
     /* Mobile-friendly links */
     nav a {
         display: block;
-        margin: 1rem 7rem;
-        padding: 1rem 0rem;
+        margin: 0.5rem 5rem;
+        padding: 0.5rem 0rem;
         text-align: center;
     }
 
